tests/cases/scc/error/0007-unmatchedcppif.c
//!necc-dbg @ -as
#ifdef FOO

